src/parser/snapshots/crochet__parser__tests__type_decls-6.snap
---
source: src/parser/mod.rs
expression: "parse(r#\"type Foo<T extends string = \"foo\"> = {bar: T}\"#)"
---
Program {
    body: [
        TypeDecl {
            span: 0..45,
            declare: false,
            id: Ident {
                span: 5..8,
                name: "Foo",
            },
            type_ann: Object(
                ObjectType {
                    span: 37..45,
                    props: [
                        TProp {
                            span: 38..44,
                            name: "bar",
                            optional: false,
                            type_ann: TypeRef(
                                TypeRef {
                                    span: 43..44,
                                    name: "T",
                                    type_params: None,
                                },
                            ),
                        },
                    ],
                },
            ),
            type_params: Some(
                [
                    TypeParam {
                        span: 9..33,
                        name: Ident {
                            span: 9..10,
                            name: "T",
                        },
                        constraint: Some(
                            Prim(
                                PrimType {
                                    span: 19..25,
                                    prim: Str,
                                },
                            ),
                        ),
                        default: Some(
                            Lit(
                                LitType {
                                    span: 28..33,
                                    lit: Str(
                                        Str {
                                            span: 28..33,
                                            value: "foo",
                                        },
                                    ),
                                },
                            ),
                        ),
                    },
                ],
            ),
        },
    ],
}
